* overlayAnchor for all SVOverlays gives a position on overlay to be anchored to Street View (defaults to original behaviour: the centre)
* Mapsicle now automatically loads stylesheet from the same path as mapsicle.js is loaded from
* fixed Mapsicle#getLocations()

Mapsicle API v1.0 - 13 November 2009
====================================

* altered Mapsicle constructor: first paramter is now "container", a DOM element, rather than an ID.
* removed Mapsicle#addStaticOverlay, Mapsicle#clearStaticOverlays, Mapsicle#removeStaticOverlay and SVDecal

Mapsicle API v0.9.8 - 9 October 2009
====================================

* removed Mapsicle#registerCallback. You should use GEvent.addListener to register callbacks for events.

Mapsicle API v0.9.7 - 8 October 2009
====================================

* Mapsicle#endStreetView renamed to close
* SVTrackingOverlay#tracking renamed to getLocation
* MapsicleConfig renamed to MapsicleParams
* fix height and width setting in Custom Info Windows, so example should now work in IE
* ugly partial fix for markers not showing up in Chrome
* fixed everything-is-broken-in-Internet-Explorer issue
* use visibility: hidden rather than display: none to hide overlays during drag to fix issue with YouTube player being reloaded

Mapsicle API v0.9.1 - 14 September 2009       
=======================================

* fixed z-index for SVCustomInfoWindow so it shows up over the top of markers, as SVMiniInfoBox does

Mapsicle API v0.9.0 - 14 September 2009
=======================================

* restyled to Google coding conventions
* first public release

Mapsicle API v0.6.1 - 10 September 2009
=======================================

* fixed a few minor mistakes in documentation
* changed under_scored variables to camelCased: this affects configuration parameters but not event names.
* offscreen arrows are no longer scaled to the height of the marker

Mapsicle API v0.6.0 - 10 September 2009
=======================================
